--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "devDependencies": {
     "jest": "^30.2.0",
-    "make-coverage-badge": "^1.2.0"
+    "make-coverage-badge": "^1.2.0",
+    "prettier": "^3.7.4"
   },
   "jest": {
     "verbose": true,
