feat: Add GitHub Actions CI workflow for Node.js build and test.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,3 +23,9 @@ jobs:
 
       - name: Uruchom testy
         run: npm test
+
+  xxx:
+    runs-on: ubuntu-latest
+
+    steps:
+      - run: echo "xxx"
