feat: Add GitHub Actions CI workflow with pre-build, build, and test result reporting jobs.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,8 +7,20 @@ on:
     branches: ["master"]
 
 jobs:
-  build:
+  pre-build:
+    environment: czekaj
+
     runs-on: ubuntu-latest
+
+    steps:
+      - run: echo "samo echo dla ${{github.repository_owner}}"
+
+  build:
+    needs: pre-build
+    runs-on: ubuntu-latest
+
+    outputs:
+      results: ${{ steps.test.outputs.test }}
 
     steps:
       - uses: actions/checkout@v4
@@ -22,4 +34,28 @@ jobs:
         run: npm install
 
       - name: Uruchom testy
+        id: test
         run: npm test
+        continue-on-error: true
+
+      - name: "Zbieranie wynikow testów"
+        id: test-results
+        run: |
+          if [ "${{steps.test.outcome}}" === "success"]; then
+            echo "test_result=passed" >> $GITHUB_OUTPUT
+          else 
+            echo "test_results=failed" >> $GITHUB_OUTPUT
+          fi
+
+  reults:
+    needs: build
+    if: always()
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: "Sprawdza wynik testów"
+        run: |
+          echo "Status testów z poprzedniego joba: ${{ needs.build.outputs.results }}"
+          if [ "${{ needs.build.outputs.results }}" === 'failed' ]; then
+            echo "Testy nie powiodły się"
+          fi
