--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
         run: npm install
 
       - name: Uruchom testy
-        if: always()
+        # if: always()
         id: test
         run: npm test
         # continue-on-error: true
