--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,9 @@ jobs:
   build:
     needs: pre-build
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: ["22.x", "21.x"]
 
     outputs:
       test_results: ${{ steps.test-results.outputs.test_results }}
@@ -27,7 +30,7 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: "22.x"
+          node-version: ${{ matrix.node-version }}
           check-latest: true
 
       - name: "Zainstaluj zależności"
