--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   pre-build:
-    environment: czekaj
+    # environment: czekaj
 
     runs-on: ubuntu-latest
 
@@ -18,9 +18,15 @@ jobs:
   build:
     needs: pre-build
     runs-on: ubuntu-latest
+    env:
+      node-version: '["22.x", "21.x"]'
+      MAIN_VERSION: "${{ fromJson(env.node-version)[0] }}"
     strategy:
       matrix:
-        node-version: ["22.x", "21.x"]
+        node-version: ${{ fromJson(env.node-version) }}
+
+    permissions:
+      pull-requests: write
 
     outputs:
       test_results: ${{ steps.test-results.outputs.test_results }}
