feat: add GitHub Actions CI workflow for build, test, CodeQL analysis, coverage reporting, and GitHub Pages deployment.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
         uses: github/codeql-action/init@v3
         with:
           languages: "javascript-typescript"
-          queries: sequrity-and-quality
+          queries: security-and-quality
 
       - name: Wykonaj analizę kodu
         uses: github/codeql-action/analyze@v3
